feature: Create package cryptophasia.networking.transmission for client-server messages.